fixed photo distortion

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -27,7 +27,6 @@ img {
     border-style: solid;
     border-color: black;
     width: 400px;
-    height: 400px;
 }
 
 main {
